--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "homepage": "https://ARodriguezHacks.github.io/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "react": "^16.10.2",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
     "react-bulma-components": "3.1.3",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.0",
+    "serialize-javascript": "^2.1.2"
   },
   "scripts": {
     "predeploy": "yarn run build",
